erDiagram
    material_groups ||--o{ material_families : contains
    material_families ||--o{ material_categories : contains
    material_families ||--o{ safety_content : describes
    material_categories ||--o{ lots : classifies
    material_categories ||--o{ price_history : prices
    material_categories ||--o{ material_aliases : resolves
    material_categories ||--o{ recycler_material_acceptance : accepted
    recyclers ||--o{ recycler_material_acceptance : accepts
    recycler_material_acceptance ||--o{ recycler_rate_cards : quotes
    users ||--o| collectors : profile
    users ||--o| recyclers : profile
    collectors ||--o{ lots : owns
    lots ||--o{ lot_images : illustrates
    lots ||--o{ lot_matches : offers
    recyclers ||--o{ lot_matches : receives
    lots ||--o{ transactions : trades
    recyclers ||--o{ transactions : buys
    transactions ||--o{ handover_records : records
    lots ||--o{ handover_records : traces
    delhi_wards ||--o{ lots : locates
    delhi_wards ||--o{ price_history : localizes
    material_categories ||--o{ voice_calls : resolves
    material_categories ||--o{ whatsapp_messages : resolves
